# Weather-API

./: README.md
Weather_API/: pyproject.toml
Weather_API/theweather/: .env  db.sqlite3
Weather_API/theweather/theweather/: settings.py  urls.py
Weather_API/theweather/weather_api/: forms.py  models.py  views.py
Weather_API/theweather/weather_api/migrations/: 0001_initial.py  0002_alter_city_name.py
